frontend/test/should_fail/defYield_004.grg
using defYield;

test t
{
	def x:B;
	pp:p(yield x);
}

pattern p(def x:B)
{
	y:A;
	yield { yield x = y; }
}

